--- a/style.css
+++ b/style.css
@@ -1,373 +1,156 @@
-body {
+body{
     margin: 0;
     padding: 0;
-    font-family: "Raleway", sans-serif;
-    animation: fadeIn 2s;
+    background: linear-gradient(45deg, rgb(20, 20, 58),  #17161a) fixed;
+    background-size: cover; 
+    background-repeat: no-repeat;
 }
 
-.main{
-  width: 100%;
-  background-image: url(img/main.jpg);
-  background-size: cover;
-  height: 850px;
-  display:flex;
-  justify-content: center;
-  align-items: center;
+.content{
+   
+}
+
+
+
+.head-bar{
+position: absolute;
+top: -100px;
+left: 50px;
+right: 50px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+margin: 20px 50px 30px 50px;
+}
+
+.bar-logo{
+    display: flex;
+    align-items: center;
+    
+}
+
+
+.logo-text{
+    font-family: "Ubuntu mono", sans-serif;
+    color: white;
+    font-size: 25px;
+    text-align: center;
+}
+
+.bar-logo img{
+    margin-left: 10px;
+    margin-right: 10px;
+    height: 30px;
+    width: 30px;
+    
+}
+
+
+.nav-bar{
+   display: flex;
+}
+.nav-btns{
+    text-transform: uppercase;
+    text-decoration: none;
+    color: white;
+    font-size: 15px;
+    margin: 0 30px 0 30px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    opacity: 0.7;
+    transition: all .3s linear;
+}
+
+
+.nav-btns:after{
+    display: block;
+    align-self: center;
+    content: " ";
+    background: linear-gradient(45deg, rgb(25, 25, 145), rgb(89, 190, 152));
+    height: 2px;
+    width: 0%;
+    transition: all .3s linear;
+}
+
+.nav-btns:hover:after{
+width: 100%;
+
+}
+
+.nav-btns:hover{
+   opacity: 1;
+   
+    
+    }
+
+.prewiew{
+    display: flex;
+    margin-top: 250px;
+    margin-left: -500px;
+    color: white;
+    flex-wrap: wrap;
+    flex-direction: column;
+    max-width: 500px;
+
+}
+
+.title{
+    font-size: 40px;
+    font-weight: 300;
+    font-family: 'Julius Sans One', sans-serif;
+    font-weight: bold;
+  
+}
+.main-text{
+    width: 500px;
+    color: gray;
+    font-family: "Roboto", sans-serif;
+    font-weight: 600;
+}
+.contact-btns{
+    display: flex;
+    justify-content: flex-start;
+    width: 500px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.contact-btn{
+    width: 100px;
+    display: block;
+    padding: 10px 20px 10px 20px;
+    margin: 50px 30px 0 0;
+    text-decoration: none;
+    text-align: center;
+    font-size: 13px;
+    font-weight: 600;
+    color: white;
+    font-family: "Montserrat", sans-serif;
+    border-radius: 20px;
+    background: linear-gradient(45deg, rgb(25, 25, 145), rgb(17, 107, 73));
+}
+
+.art-img-cont{
+    display: none;
+    z-index: -1;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    animation: fadeIn 3s;
+
+}
+
+.art-img-cont img{
+    filter: blur(2px);
+    opacity: 0.5;
+    width: 1000px;
 }
 
 
 @keyframes fadeIn{
-  from { opacity: 0;}
-  to { opacity: 1;}
+    from {
+        opacity: 0;
+    }
+    to{ opacity: 1;
 }
-
-.header{
-  z-index: 3;
-  width: 100%;
-  height: 60px;
-  background: white;
-  position: absolute;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #00000000;
-     
 }
-
-.textLogo{
-  color: white;
-  margin-left: 20px;
-}
-
-.navBar{
-  margin-right: 20px;
-  font-family: "Lexend", sans-serif;
-  font-weight: 600;
-}
-
-.nBtn{
-  text-decoration: none;
-  text-transform: uppercase;
-  color: white;
-  margin: 0 10px 0 10px;
-  display: inline-block;
-}
-
-.nBtn:after{
-  content: " ";
-  display: block;
-  height: 2px;
-  background-color: white;
-  width: 100%;
-  opacity: 0;
-  transition: opacity .2s linear;
-}
-
-.nBtn:hover:after{
-  opacity: 1;
-}
-
-
-
-
-.mainPic{
-  z-index: 0;
-  width: 100%;
-  position: absolute;
-  top: 0px;
-}
-
-.mainPic img{
-  width: 100%;
-}
-
-
-.mainBtn{
-  margin-top: 450px;
-  text-align: center;
-  z-index: 4;
-  color: white;
-  text-transform: uppercase;
-  font-size: 20px;
-  background-color: black;
-  padding: 10px 40px 10px 40px;
-  border-radius: 40px;
-  font-family: "Lexend", sans-serif;
-  font-weight: 700;
-  border: solid 3px black;
-  transition: color .2s linear;
-  transition: background-color .2s linear;
-}
-
-.mainBtn:hover{
-  color: black;
-  background-color: white;
-  outline: none;
-  cursor: pointer;
-}
-
-.mainIntro{
-  left: 30px;
-  position: absolute;
-  font-size: 50px;
-  font-weight: bold;
-  color: white;
-}
-
-.weAre{
-  font-size: 50px;
-  margin-left: 10px;
-  text-transform: uppercase;
-  color: white;
-}
-
-.webS{
-  font-size: 25px;
-  font-family: "Lexend", sans-serif;
-  font-weight: 200;
-}
-
-.hi{
-  font-family: "Lexend", sans-serif;
-  color: lightgrey;
-}
-
-
-.title{
-  margin-top: 50px;
-  margin-left: 30px;
-}
-
-.title:after{
-  content: " ";
-  display: block;
-  height: 2px;
-  background-color: lightgray;
-  width: 5%;
-}
-
-.btns{
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  font-family: "Lexend", sans-serif;
-  font-weight: 700;
-  
-}
-
-.btns a{
-  width: 70px;
-  margin: 20px;
-  text-align: center;
-  text-decoration: none;
-  color: white;
-  background-color: black;
-  font-size: 20px;
-  padding: 10px 40px 10px 40px;
-  border-radius: 40px;
-  outline: none;
-  border: solid 3px black;
-  transition: background-color .2s linear;
-  transition: color .2s linear;
-}
-
-.btns a:hover{
-  color: black;
-  background-color: white;
-  border: solid 3px black;
-  outline: none;
-  cursor: pointer;
-}
-
-
-.portfolioParentBlock{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  
-}
-
-
-
-.portfolioParentBlock img{
-  width: 40%;
-  border-radius: 30px;
-}
-
-
-
-
-
-.int{
-  margin-top: 100px;
-  margin-bottom: 50px;
-  display: flex;
-  flex-direction: column;
- text-align: center;
- align-items: center;
-}
-
-
-.intBtn{
-  text-align: center;
-  z-index: 4;
-  color: white;
-  text-transform: uppercase;
-  font-size: 20px;
-  background-color: black;
-  padding: 10px 40px 10px 40px;
-  border-radius: 40px;
-  font-family: "Lexend", sans-serif;
-  font-weight: 700;
-  border: solid 3px black;
-  transition: color .2s linear;
-  transition: background-color .2s linear;
-}
-
-.intBtn:hover{
-  color: black;
-  background-color: white;
-  outline: none;
-  cursor: pointer;
-}
-
-
-
-
-.letsTalk{
-  font-family: "Lexend", sans-serif;
-  letter-spacing: 3px;
-}
-
-
-
-
-.footer{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  color: white;
-  background-color: black;
-  
-  width: 100%;
-  padding: 0;
-  margin: 0;
-}
-
-
-.fLogo{
-  color: #2F2F35;
-  font-size: 50px;
-  border: solid 3px #2F2F35;
-  padding: 10px;
-}
-
-.fWeb{
-  letter-spacing: 5px;
-  margin-top: 0px;
-  font-family: "Lexend", sans-serif;
-}
-
-.webLinks img{
-  margin: 0 10px 0 10px;
-  height: 50px;
-  width: 50px;
-}
-
-.fCopy{
-  font-family: "Lexend", sans-serif;
-}
-
-html, body {
-  height: 100%;
-}
-body {
-  display: flex;
-  flex-direction: column;
-}
-.content {
-  flex: 1 0 auto;
-}
-.footer {
-  flex-shrink: 0;
-}
-
-
-@media screen and (max-width: 800px){
-  .textLogo{
-    margin: 8px;
-    font-size: 30px;
-  }
-  .navBar{
-    margin: 8px;
-    font-size: 10px;
-  }
-  
-  .btns a{
-  width: 70px;
-  margin: 20px;
-  text-align: center;
-  text-decoration: none;
-  color: white;
-  background-color: black;
-  font-size: 20px;
-  padding: 10px;
-  border-radius: 40px;
-  outline: none;
-  border: solid 3px black;
-  transition: background-color .2s linear;
-  transition: color .2s linear;
-    
-    
-}
-  
-.portfolioParentBlock img{
-  width: 90%;
-  border-radius: 30px;
-}
-
-  
-}
-
-@media screen and (max-width: 500px){
-    
- .mainIntro{
-  left: 5px;
-  position: absolute;
-  font-size: 50px;
-  font-weight: bold;
-  color: white;
-}
-    
-    
-    
-  .fLogo{
-  color: #2F2F35;
-  font-size: 40px;
-  border: solid 3px #2F2F35;
-  padding: 10px;
-}
- 
-  .textLogo{
-  color: white;
-  margin-left: 20px;
-  font-size: 20px;
-}
-    
-  .nBtn{
-  text-decoration: none;
-  text-transform: uppercase;
-  color: white;
-  margin: 0 3px 0 3px;
-  display: inline-block;
-}  
-    
-    
-    
-    
-}
-
-
-
