--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ width: 100%;
 
     .prewiew{
         display: flex;
-        margin-top: 500px;
+        margin-top: 50%;
         margin-bottom: 0;
         margin-left: 0;
         justify-content: center;
