--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,11 @@
   box-sizing: border-box;
 
   font-family: 'Comfortaa', cursive;
+  text-decoration: none;
+
+}
+
+.all-content{
 
 }
 
@@ -20,6 +25,10 @@
   justify-content: space-between;
   align-items: center;
   margin: 20px 40px 0 40px;
+}
+
+li a{
+  color: gray;
 }
 
 .nav-btn-block{
@@ -114,7 +123,7 @@
 
   font-size: 20px;
   font-weight: 600;
-  color: linear-gradient(60deg, #09449d, #0071bc);
+  color: #09449d;
 
   transition: all .5s;
 }
@@ -126,6 +135,22 @@
   background: linear-gradient(60deg, #09449d, #0071bc);
 }
 
+.login-btn-active{
+  text-decoration: none;
+  border: solid 1px #09449d;
+  padding: 10px 15px 10px 15px;
+  border-radius: 20px;
+  color: white;
+  background: linear-gradient(60deg, #09449d, #0071bc);
+
+  font-size: 20px;
+  font-weight: 600;
+
+  transition: all .5s;
+}
+
+
+
 
 .main-text-land-block{
   display: flex;
@@ -134,7 +159,6 @@
   width: 100%;
   height: 80vh;
 
-  overflow:;
 }
 
 
@@ -155,7 +179,7 @@
 .main-text .main-par{
   font-size: 23px;
   width: 70%;
-  line-height: 32px;
+  line-height: 35px;
   color: gray;
 
   margin-top: 5%;
@@ -168,6 +192,8 @@
 .btn{
   text-decoration: none;
   padding: 8px 15px 8px 15px;
+
+  border: solid 1px rgba(249, 249, 255, 0);
   border-radius: 20px;
 
   margin-right: 3%;
@@ -178,6 +204,17 @@
   background: linear-gradient(60deg, #09449d, #0071bc);
 
   transition: all 0.5s;
+}
+
+.btn:hover{
+  border: solid 1px #09449d;
+  border-radius: 20px;
+  background: white;
+  font-size: 20px;
+  font-weight: 600;
+  color: #09449d;
+
+  transition: all .5s;
 }
 
 
@@ -216,23 +253,26 @@
 
 
 .land{
+  width: 70%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.land svg{
-  position: absolute;
-  top: 20%;
-  right: 10%;
+.land-svg{
 
-  z-index: -1;
-  width: 500px;
-  animation: 3s linear animGlass;
+width: 65%;
+z-index: 0;
+transition: all .5s linear;
 }
 
-@@keyframes animGlass {
-  from{
-    top: 20%;
-  }
-  to{
-    top: 10%;
-  }
+.land-svg:hover{
+    animation-duration: 3s;
+    animation-name: glassMove;
+}
+
+.cls-1{
+
+
 }
