--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,13 +84,13 @@ li a{
   text-align: center;
 }
 
-.nav-btn:hover{
+/*.nav-btn:hover{
   color: black;
 }
 
 .nav-btn:hover::before{
   opacity: 1;
-}
+} */
 
 
 .logo-text{
@@ -208,7 +208,6 @@ li a{
 
 .btn:hover{
   border: solid 1px #09449d;
-  border-radius: 20px;
   background: white;
   font-size: 20px;
   font-weight: 600;
